--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Cursos da Alura</title>
+    <title>Listas de Cursos de DevOps da Alura</title>
 </head>
 <body>
     <ul>
-        <li>Vagrant</li>
-        <li>Docker</li>
+        <li>Vagrant: Gerenciando máquinas virtuais</li>
+        <li>Docker: Criando containers sem dor de cabeça</li>
         <li>Ansible</li>
         <li>Integração Contínua</li>
     </ul>
