--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <li>Vagrant: Gerenciando máquinas virtuais</li>
         <li>Docker: Criando containers sem dor de cabeça</li>
         <li>Ansible: Sua infraestrutura como código</li>
-        <li>Integração Contínua</li>
+        <li>Integração Contínua: Maturidade e produtividade no desenvolvimento de software</li>
         <li>Kubernets: Introdução a orquestração de containers</li>
     </ul>
 </body>
